banner part done

--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
             <button>Download Resume</button>
         </div>
     </section>
+    <section>
+        <div class="banner">
+            <img src="./img/Group.png" alt="">
+            <h1>"In the near future, I hope to become a <br>Developer."</h1>
+            <p>Keep going with your learning and practice, and I’m sure you’ll make a great developer! If you have any questions or need <br> assistance with your learning journey, feel free to ask.</p>
+            <button>Contact with me</button>
+            
+        </div>
+    </section>
 </body>
 </html>
