why web development done

--- a/index.html
+++ b/index.html
@@ -17,9 +17,39 @@
         <div class="banner">
             <img src="./img/Group.png" alt="">
             <h1>"In the near future, I hope to become a <br>Developer."</h1>
-            <p>Keep going with your learning and practice, and I’m sure you’ll make a great developer! If you have any questions or need <br> assistance with your learning journey, feel free to ask.</p>
+            <p>Keep going with your learning and practice, and I’m sure you’ll make a great developer! If you have any questions or need <br> assistance with your learning journey.</p>
             <button>Contact with me</button>
             
+        </div>
+    </section>
+    <section>
+        <div class="whyweb">
+            <h3>Why Web Development??</h3>
+            <p>If you’re looking for reasons to pursue web development, it offers numerous opportunities <br>such as a high demand for skills,potential for a good income, and the ability to create <br> impactful work. If you have any more questions or need assistance with web development.</p>
+            <div class="docoding">
+                <div class="txt">
+                    <h4>I will Do Coding and Change The World</h4>
+                    <p>That’s a powerful goal! Coding can indeed change <br> the world by creating new technologies, solving <br> complex problems, and making people’s lives easier</p>
+                    <button>Learn More</button>
+                </div>
+                <img src="./img/Layer_1.png" alt="">
+            </div>
+            <div class="websystem ">
+                <img src="./img/Group 3.png" alt="">
+                <div class="txt">
+                    <h4>I will help People by creating Modern <br>Web System</h4>
+                    <p>That’s a powerful goal! Coding can indeed change <br> the world by creating new technologies, solving <br> complex problems, and making people’s lives easier</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+            <div class="docoding">
+                <div class="txt">
+                    <h4>I will Do Coding and Change The World</h4>
+                    <p>That’s a powerful goal! Coding can indeed change <br> the world by creating new technologies, solving <br> complex problems, and making people’s lives easier</p>
+                    <button>Learn More</button>
+                </div>
+                <img src="./img/Group 4.png" alt="">
+            </div>
         </div>
     </section>
 </body>
