--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="Inspiration">
+            <h4>My Inspiration</h4>
+            <p>Jonker Mahbub, a renowned tech guru, was known for his innovative ideas and his ability <br> to simplify complex tech concepts for everyone. Rahim admired Jonker's <br>empowering others with knowledge</p>
+            <iframe width="1076" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=8KfWhR39hkSkImoo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        </div>
+    </section>
 </body>
 </html>
