Next Target done

--- a/index.html
+++ b/index.html
@@ -97,5 +97,35 @@
             
         </div>
     </section>
+    <section>
+        <div class="nexttarget">
+            <h3>My Next Target</h3>
+            <p>The user’s next goal is to learn and master React.js, Node.js, <br>and MongoDB</p>
+            <div class="react">
+                <img src="./img/react.png" alt="">
+                <div class="reacttext">
+                    <h4>ReactJS</h4>
+                    <p>React.js, often simply called React, is an open-source JavaScript library for building user interfaces, <br>particularly single-page</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+            <div class="react">
+                <img src="./img/nodejs.png" alt="">
+                <div class="reacttext">
+                    <h4>NodeJs</h4>
+                    <p>React.js, often simply called React, is an open-source JavaScript library for building user <br>interfaces,          particularly single-page</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+            <div class="react">
+                <img src="./img/mongodb.png" alt="">
+                <div class="reacttext">
+                    <h4>MongoDB</h4>
+                    <p>React.js, often simply called React, is an open-source JavaScript library for building user interfaces, <br>particularly single-page</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
