--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="./img/Group.png" alt="">
             <h1>"In the near future, I hope to become a <br>Developer."</h1>
             <p>Keep going with your learning and practice, and I’m sure you’ll make a great developer! If you have any questions or need <br> assistance with your learning journey.</p>
-            <button>Contact with me</button>
+            <a href="#footer"><button>Contact with me</button></a>
             
         </div>
     </section>
@@ -127,5 +127,23 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="support">
+            <h2>I need Support</h2>
+            <p>Web development refers to the process of creating, building, and maintaining websites</p>
+            <div class="inputpart">
+                <input type="text" placeholder="Suggest me any feedback for me">
+                <button>Submit</button>
+            </div>
+        </div>
+    </section>
 </body>
+<footer id="footer"><div class="footerpart">
+    <p>An Open Commitment by Rakib Sikder</p>
+    <div class="icons">
+        <a href="https://www.facebook.com/rakibul.hasan.fb.us" target="_blank"><img src="./img/facebook.png" alt=""></a>
+        <a href="https://github.com/rakib-sikder" target="_blank"><img src="./img/github.png"  alt=""></a>
+        <a href="https://www.linkedin.com/in/rakib-sikder-85687a215/" target="_blank"><img src="./img/linkedin-icon 1.png" alt=""></a>
+    </div>
+</div></footer>
 </html>
