hover update done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="txt">
                     <h4>I will Do Coding and Change The World</h4>
                     <p>That’s a powerful goal! Coding can indeed change <br> the world by creating new technologies, solving <br> complex problems, and making people’s lives easier</p>
-                    <button>Learn More</button>
+                    <a href="https://www.google.com/" target="_blank"><button>Learn More</button></a>
                 </div>
                 <img src="./img/Layer_1.png" alt="">
             </div>
@@ -39,14 +39,14 @@
                 <div class="txt">
                     <h4>I will help People by creating Modern <br>Web System</h4>
                     <p>That’s a powerful goal! Coding can indeed change <br> the world by creating new technologies, solving <br> complex problems, and making people’s lives easier</p>
-                    <button>Learn More</button>
+                    <a href="https://www.google.com/" target="_blank"><button>Learn More</button></a>
                 </div>
             </div>
             <div class="docoding">
                 <div class="txt">
                     <h4>I will Do Coding and Change The World</h4>
                     <p>That’s a powerful goal! Coding can indeed change <br> the world by creating new technologies, solving <br> complex problems, and making people’s lives easier</p>
-                    <button>Learn More</button>
+                    <a href="https://www.google.com/" target="_blank"><button>Learn More</button></a>
                 </div>
                 <img src="./img/Group 4.png" alt="">
             </div>
@@ -73,7 +73,9 @@
                     <p>
                         The page is in development mod <br> with various frames and sections,<br> including “My Inspiration” and <br>“Developing resources.”
                     </p>
-                    <button>Learn More</button>
+                    <a href="https://www.google.com/" target="_blank">
+                        <button>Learn More</button>
+                    </a>
                 </div>
                 <div class="terget2">
                     <img src="./img/css.png" alt="">
@@ -81,7 +83,9 @@
                     <p>
                         The page is in development mod <br> with various frames and sections,<br> including “My Inspiration” and <br>“Developing resources.”
                     </p>
-                    <button>Learn More</button>
+                    <a href="https://www.google.com/" target="_blank">
+                        <button>Learn More</button>
+                    </a>
                 </div>
                 <div class="terget3">
                     <img src="./img/js.png" alt="">
@@ -89,7 +93,9 @@
                     <p>
                         The page is in development mod <br> with various frames and sections,<br> including “My Inspiration” and <br>“Developing resources.”
                     </p>
-                    <button>Learn More</button>
+                    <a href="https://www.google.com/" target="_blank">
+                        <button>Learn More</button>
+                    </a>
                 </div>
                 
             </div>
@@ -133,7 +139,7 @@
             <p>Web development refers to the process of creating, building, and maintaining websites</p>
             <div class="inputpart">
                 <input type="text" placeholder="Suggest me any feedback for me">
-                <button>Submit</button>
+                <a href="https://www.google.com/" target="_blank"><button>Submit</button></a>
             </div>
         </div>
     </section>
